--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -4,11 +4,7 @@
   align-items: center;
 }
 
-.background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
- } 
+.background {} 
 .container { 
   display: flex;
   align-items: center;
@@ -22,16 +18,19 @@
 .title.web { 
   font-weight: 100;
   color: #262526;
-  font-size: 100px
+  font-size: 100px;
+  transform: translateY(0px)
 } /* -TODO: dynamic font-size on android*/
 .title { 
   font-weight: 100;
   color: #262526;
-  font-size: 180px
+  font-size: 180px;
+  transform: translateY(40px)
 } /* -TODO: dynamic font-size on android*/
 .subtitle {
   text-align: center;
   font-size: medium;
+  transform: translateY(-17px)
 }
 .modules-container { 
   margin-top: 44px;
@@ -42,6 +41,26 @@
   padding-top:40px;
   margin: 20px !important;
   font-size: calc(4.5vw + 4.5vh);
+  font-weight: 300;
+  color: #3f3e3f;
+  border-color: #3f3e3f;
+  border-style: solid;
+  border-width:  3px;
+  border-radius: 15px;
+  padding: 0px 31px !important;
+  cursor: pointer;
+  text-align: center;
+  transition-property: backgroundColor;
+  transition-duration: 0.5s;
+  transition-delay: 0s;
+  transition-timing-function: ease;
+  background-color: white;
+  box-shadow: -2px 3px 5px #777777;
+}
+.module-toggle.camera { 
+  padding-top:40px;
+  margin: 20px !important;
+  font-size: calc(2.5vw + 2.5vh);
   font-weight: 300;
   color: #3f3e3f;
   border-color: #3f3e3f;
@@ -128,4 +147,8 @@
   padding-top: 20px;
   color:#888;
   font-size: 24px;
+}
+.hidden {
+  position: absolute;
+  opacity: 0
 }
