--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -1,10 +1,12 @@
+html, body {
+  display: flex;
+}
+
 .wrapper { 
   align-items: center;
   display: flex;  
   align-items: center;
 }
-
-.background {} 
 .container { 
   display: flex;
   align-items: center;
@@ -37,10 +39,14 @@
   display: flex;
   align-items: center
 }
+.modules-container.web {
+  margin-top: -50px !important;
+  opacity: 0
+}
 .module-toggle.web { 
   padding-top:40px;
   margin: 20px !important;
-  font-size: calc(4.5vw + 4.5vh);
+  font-size: calc(4vw + 4vh);
   font-weight: 300;
   color: #3f3e3f;
   border-color: #3f3e3f;
@@ -104,7 +110,7 @@
   display: flex;
   flex-direction: row;
   margin: 10px;
-  font-size: 72px;
+  font-size: 44px;
   font-weight: 500;
   color: #3b393b;
 }
@@ -115,7 +121,7 @@
   color: #333133;
 }
 .geolocation-data {
-  font-size: 50px;
+  font-size: 22px;
   font-weight: 400;
   color: #333133;
 }
@@ -130,7 +136,8 @@
 .module-text-container-column { 
   flex-direction: column !important;
   align-items: center;
-  max-width: 100%
+  justify-content: center;
+  align-self: center
 }
 .module-text { 
   font-size: 22px
